[gd_scene load_steps=2 format=3 uid="uid://bni8iiep1s4u8"]

[ext_resource type="Script" path="res://src/Scripts/Networking/MultiPlayerController.gd" id="1_encka"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_encka")

[node name="Host" type="Button" parent="."]
layout_mode = 0
offset_left = 80.0
offset_top = 75.0
offset_right = 151.0
offset_bottom = 106.0
text = "Host"

[node name="Join" type="Button" parent="."]
layout_mode = 0
offset_left = 180.0
offset_top = 76.0
offset_right = 254.0
offset_bottom = 107.0
text = "Join"

[node name="StartGame" type="Button" parent="."]
layout_mode = 0
offset_left = 283.0
offset_top = 76.0
offset_right = 379.0
offset_bottom = 107.0
text = "Start Game"

[connection signal="button_down" from="Host" to="." method="_on_host_button_down"]
[connection signal="button_down" from="Join" to="." method="_on_join_button_down"]
[connection signal="button_down" from="StartGame" to="." method="_on_start_game_button_down"]
